# nl2sql-assistant

./: .gitignore  LICENSE  README.md  config.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
.streamlit/: config.toml
app/: Home.py
app/pages/: 1_DB-Aware_Query.py  1_NL_to_SQL.py  1_Schema_Explorer.py  2_NL_to_SQL.py  2_Write_Mode.py  2_Write_Mode_RAG.py  3_Generic_NL_to_SQL.py  3_Generic_SQL.py  3_Write_Mode_RAG.py  4_Generic_NL_to_SQL.py  _1_Schema_Explorer.py
data/: dictionary.md
src/nl2sql_assistant/: __init__.py  app_state.py  config.py
src/nl2sql_assistant/chains/: __init__.py  generic_sql_generator.py  risk_classifier.py  sql_explainer.py  sql_generator.py  write_sql_generator.py
src/nl2sql_assistant/db/: __init__.py  bootstrap.py  runner.py  schema.py  write_guard.py  write_runner.py
src/nl2sql_assistant/llm/: __init__.py  huggingface_client.py  llm_factory.py  ollama_client.py
src/nl2sql_assistant/prompts/: __init__.py  explain_prompt.py  generic_sql_prompt.py  intent_prompt.py  risk_prompt.py  sql_prompt.py  sqlcoder_prompt.py  write_prompt.py  write_sql_prompt.py
src/nl2sql_assistant/rag/: __init__.py  corpus.py  retriever_bm25.py
src/nl2sql_assistant/ui/: layout.py  widget.py
tests/: test_prompt_render.py  test_rag_retriever.py  test_risk_parser.py  test_schema.py  test_smoke.py  test_sql_safety.py  test_sql_validation.py  test_write_guard.py
